--- a/public/contact.html
+++ b/public/contact.html
@@ -177,10 +177,10 @@
                                 </div>
                             </div>
                             <div class="form-group mt-3">
-                                <button type="submit" class="button button-contactForm boxed-btn">Send</button>
+                                <button id="btn-submit" type="submit" class="button button-contactForm boxed-btn">Send</button>
                             </div>
-                            <div id="successMessage" style="display:none;">
-                                Thank you! Your message has been sent to us. We will be getting back to you soon.
+                            <div id="successMessage" style="display:none; color: #0B98E9;">
+                                Thank you! We have received your message. We will be getting back to you soon.
                             </div>
                         </form>
                     </div>
